@@ -1,6 +1,11 @@
 Changes since version 3.2.0
 ---------------------------
 
+- Fixed bug with IceUtil::Cond under Windows which could cause a
+  deadlock if signal was used in conjunction multiple waiting threads
+  where at least one thread is using timedWait. Note that this bug
+  also affects IceUtil::Monitor since this uses IceUtil::Cond.
+
 - Fixed throughput performance problem on Windows that would occur
   when sending large requests.
 
